tiles display building information

--- a/CiscoToGoHackIT/src/main/webapp/resources/metronic_assets/css/custom.css
+++ b/CiscoToGoHackIT/src/main/webapp/resources/metronic_assets/css/custom.css
@@ -44,7 +44,7 @@ p.field-button {
 /* END TOP TILES ROW */
 
 /* BEGIN BIG BLUE INVOICE TILE */
-#invoiceSummaryTile {
+#foodInfoTile {
 	height: 290px !important;
 	width: 100% !important;
 }
