--- a/CiscoToGoHackIT/src/main/webapp/resources/css/style.css
+++ b/CiscoToGoHackIT/src/main/webapp/resources/css/style.css
@@ -118,3 +118,12 @@ Download more PSD stuff from www.psdgraphics.com
 	background: #f6f6f6 url(images/center-bcg.png) repeat-y right top;	
 }
 
+.tb5{
+	border:2px solid #456879;
+
+border-radius:10px;
+
+height: 8px;
+
+width: 70px;	
+}
