--- a/CiscoToGoHackIT/src/main/webapp/WEB-INF/views/css/style.css
+++ b/CiscoToGoHackIT/src/main/webapp/WEB-INF/views/css/style.css
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Login Form</title>
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
-  <style type="text/css">
-   html, body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -109,6 +98,13 @@ table {
   margin: 0 -1px;
 }
 
+/*
+ * Copyright (c) 2012-2013 Thibaut Courouble
+ * http://www.cssflow.com
+ *
+ * Licensed under the MIT License:
+ * http://www.opensource.org/licenses/mit-license.php
+ */
 body {
   font: 13px/20px 'Lucida Grande', Tahoma, Verdana, sans-serif;
   color: #404040;
@@ -270,29 +266,3 @@ input[type=submit]:active {
 .lt-ie9 input[type=text], .lt-ie9 input[type=password] {
   line-height: 34px;
 }
-  
-  </style>
-</head>
-<body>
-  <section class="container">
-    <div class="login">
-      <h1>Login to CiscoToGo</h1>
-      <form method="post" action="/ciscotogo/orderToGo">
-        <p><input type="text" name="customer_cec" value="" placeholder="Username or Email"></p>
-        <p><input type="password" name="customer_password" value="" placeholder="Password"></p>
-        <p class="remember_me">
-          <label>
-            <input type="checkbox" name="remember_me" id="remember_me">
-            Remember me on this computer
-          </label>
-        </p>
-        <p class="submit"><input type="submit" name="commit" value="Login"></p>
-      </form>
-    </div>
-
-    <div class="login-help">
-      <p>Forgot your password? <a href="https://pwreset.cisco.com/CISCO/psf.exe#2">Click here to reset it</a>.</p>
-    </div>
-  </section>
-</body>
-</html>
